--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Welcome</title>
   </head>
   <body>
- 
+  <div class="container mt-4">
   <h1> <%= title %> </h1>
-
+    <ul>
+      <% for(let user of users) { %>
+      <li><%= user.nama%> - <%= user.kelas %></li>
+      <% } %>
+    </ul>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
