add table for user

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,12 +11,25 @@
   <body>
   <div class="container mt-4">
   <h1> <%= title %> </h1>
-    <ul>
-      <% for(let user of users) { %>
-      <li><%= user.nama%> - <%= user.kelas %></li>
-      <% } %>
-    </ul>
-  </div>
+    <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">id</th>
+      <th scope="col">nama</th>
+      <th scope="col">kelas</th>
+    </tr>
+  </thead>
+  <tbody>
+ <% for(let user of users) { %>
+    <tr>
+      <td><%= user.id_user%></td>
+      <td><%= user.nama%></td>
+      <td><%= user.kelas%></td>
+    </tr>
+  <% } %>
+  </tbody>
+</table>
+  </div>  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
