--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,18 @@
   <% } %>
   </tbody>
 </table>
+<form action="tambah" method="post" autocomplete="off">
+    <h1 class="mt-2">Tambah Siswa</h1>
+  <div class="mb-3">
+    <label for="nama" class="form-label">Nama</label>
+    <input type="text" name="nama" class="form-control" id="nama">
+  </div>
+  <div class="mb-3">
+    <label for="Kelas" class="form-label">Kelas</label>
+    <input type="text" name="kelas" class="form-control" id="Kelas">
+  </div>
+  <input type="submit" class="btn btn-primary" value="Tambah">
+</form>
   </div>  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
   </body>
